[project]
name = "DE32_megabox_L"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DE32_megabox", email = "whitecapella@naver.com"},
]
dependencies = [
    "pytest>=8.3.2",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
